5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1716_2498.log
== TEST (2019-05-07 23:54:25) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade A:"))/100

anos = 0
habA = habA + (habA * pcresA)  
while(habA < habB and pcresA < pcresB ):
	habA = habA + (habA * pcresA)
	print(habA)
	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:55:29) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade A:"))/100

anos = 0
habA = habA + (habA * pcresA)  
while(habA < habB and pcresA < pcresB ):
	habA = habA + (habA * pcresA)
	print(habA)
print(habA)
-- OUTPUT:
338953.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:12:18) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade A:"))/100

anos = 0 
habA = habA
habB = habB
while(habA < habB and pcresA < pcresB ):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	print(habA)
-- OUTPUT:
338953.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:12:28) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade A:"))/100

anos = 0 
habA = habA
habB = habB
while(habA < habB and pcresA < pcresB ):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	print(habA)
-- OUTPUT:
338953.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:17:25) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA
habB = habB
while(habA < habB and pcresA < pcresB ):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	print(anos)
-- OUTPUT:
338953.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:20:04) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA
habB = habB
while(habA =< habB and pcresA > pcresB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	print(anos)
-- ERROR:
File "XXXX", line 9
    while(habA =< habB and pcresA > pcresB):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:20:14) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA
habB = habB
while(habA <= habB and pcresA > pcresB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:20:23) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA
habB = habB
while(habA <= habB and pcresA > pcresB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	print(anos)
-- OUTPUT:
1
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:21:48) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA
habB = habB
while(habA <= habB and pcresA > pcresB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	
print(anos)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:22:12) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA
habB = habB
while(habA <= habB and pcresA > pcresB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	
print(anos)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:23:13) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA
habB = habB
while(habA < habB and pcresA > pcresB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	
print(anos)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:23:55) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA
habB = habB
while(habA < habB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	
print(anos)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:25:06) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA
habB = habB
while(habA < habB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	
print(anos)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:31:09) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA + (habA * pcresA)
habB = habB + (habB * pcresB)
while(habA < habB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	
print(anos)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:31:14) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA + (habA * pcresA)
habB = habB + (habB * pcresB)
while(habA < habB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	
print(anos)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:32:54) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA + (habA * pcresA)
habB = habB + (habB * pcresB)
while(habA != habB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	
print(anos)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:33:03) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA + (habA * pcresA)
habB = habB + (habB * pcresB)
while(habA != habB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	
print(anos)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:33:37) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA + (habA * pcresA)
habB = habB + (habB * pcresB)
while(habA != habB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	print(anos)
print(anos)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:33:49) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA + (habA * pcresA)
habB = habB + (habB * pcresB)
while(habA != habB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	print(anos)
print(anos)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:36:10) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA + (habA * pcresA)
habB = habB + (habB * pcresB)
while(habA != habB and pcresA == pcresB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	print(anos)
print(anos)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:36:34) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA + (habA * pcresA)
habB = habB + (habB * pcresB)
while(habA != habB and pcresA == pcresB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	print(anos)
print(anos)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:36:53) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA + (habA * pcresA)
habB = habB + (habB * pcresB)
while(habA < habB and pcresA == pcresB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	print(anos)
print(anos)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:49:57) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
habA = habA + (habA * pcresA)
habB = habB + (habA * pcresA)
while(habA < habB):
	habA = habA + (habA * pcresA)
	anos = anos + 1
	
print(anos)
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:55:03) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
while(habA < habB):
	habA = habA + (habA * pcresA)
	habB = habB + (habB * pcresB)
	anos = anos + 1
	
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:55:21) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
while(habA < habB):
	habA = habA + (habA * pcresA)
	habB = habB + (habB * pcresB)
	anos = anos + 1
	
print(anos)
-- EXECUTION TIME:
0.140662
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:43:23) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))/100
pcresB = float(input("Percentual de crescimento da cidade B:"))/100

anos = 0 
while(habA < habB):
	habA = habA + (habA * pcresA)
	habB = habB + (habB * pcresB)
	anos = anos + 1
	
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:46:13) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))
pcresB = float(input("Percentual de crescimento da cidade B:"))

anos = 0 
while(habA < habB):
	habA = habA + (habA * (pcresA/100))
	habB = habB + (habB * (pcresB/100)
	anos = anos + 1
	
print(anos)
-- ERROR:
File "XXXX", line 10
    anos = anos + 1
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:46:21) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))
pcresB = float(input("Percentual de crescimento da cidade B:"))

anos = 0 
while(habA < habB):
	habA = habA + (habA * (pcresA/100))
	habB = habB + (habB * (pcresB/100))
	anos = anos + 1
	
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:46:41) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))
pcresB = float(input("Percentual de crescimento da cidade B:"))

anos = 0 
while(habA < habB):
	habA = habA + (habA * (pcresA/100))
	habB = habB + (habB * (pcresB/100))
	anos = anos + 1
	
print(anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:45:51) 
-- CODE:
habA = int(input("Numeros de habites da cidade A:"))
habB = int(input("Numeros de habites da cidade B:"))
pcresA = float(input("Percentual de crescimento da cidade A:"))
pcresB = float(input("Percentual de crescimento da cidade B:"))

anos = 0 
while(habA < habB):
	habA = habA + (habA * (pcresA/100))
	habB = habB + (habB * (pcresB/100))
	anos = anos + 1
	
print(anos)
-- EXECUTION TIME:
0.232673
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
